--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Thesis</title>
 </head>
 <body>
+<h1>Client-side versus Server-side Test Suite</h1>
 
+
+
+<!-- JavaScript Libraries -->
+<script type="text/javascript" src="lib/ajax.min.js"></script>
+<script type="text/javascript" src="lib/async.js"></script>
+<script type="text/javascript" src="lib/javascript.util.js"></script>
+<script type="text/javascript" src="lib/jsts.js"></script>
+
+<!-- Custom JavaScript Code -->
+<script type="text/javascript" src="js/output.js"></script>
+<script type="text/javascript" src="js/flow.js"></script>
+<script type="text/javascript" src="js/algorithms.js"></script>
+<script type="text/javascript" src="js/data.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
