post web service working

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Client-side versus Server-side Test Suite</h1>
+<input id="networkTest" type="button" value="Test Network" onclick="initialize();" />
 <input id="startClient" type="button" value="Run Client" onclick="runClient();" />
 <input id="startServer" type="button" value="Run Server" onclick="runServer();" />
 <input id="getResults" type="button" value="Download Results" onclick="getResults();" />
