Improved flow and efficiency of client-side code

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" src="lib/jsts.js"></script>
 
 <!-- Custom JavaScript Code -->
+<script type="text/javascript" src="js/data.js"></script>
 <script type="text/javascript" src="js/flow.js"></script>
 <script type="text/javascript" src="js/algorithms.js"></script>
 <script type="text/javascript" src="js/results.js"></script>
