New web service to store result metadata to db

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -8,8 +8,7 @@
 <h1>Client-side versus Server-side Test Suite</h1>
 <br>
 <form>Test ID: <input type="text" id = "testID" name="ID"></form>
-<br>
-<select id="browser" onchange="whichBrowser()">
+Browser:<select id="browser" onchange="whichBrowser()">
   <option></option>
   <option>Chrome</option>
   <option>Firefox</option>  
@@ -19,7 +18,7 @@
   <option>Other</option>
 </select>
 <br>
-<select id="hardware" onchange="whatHardware()">
+Hardware:<select id="hardware" onchange="whatHardware()">
   <option></option>
   <option>Laptop</option>
   <option>Desktop</option>  
@@ -28,7 +27,7 @@
    <option>Other</option>
 </select>
 <br>
-<select id="OS" onchange="operatingSystem()">
+OS:<select id="OS" onchange="operatingSystem()">
   <option></option>
   <option>Windows</option>
   <option>Apple</option>  
