Flow of server code geoprocessing updated

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -47,7 +47,7 @@ OS:<select id="OS" onchange="operatingSystem()">
 <br>
 <input id="testThree" type="button" value="Third Test" onclick="thirdTest();" /> 
 <br>
-<input id="getResults" type="button" value="Download Results" onclick="getResults();" />
+<a href="http://localhost:8080/thesis/rest/services/results">Download Results</a>
 
 <!-- JavaScript Libraries -->
 <script type="text/javascript" src="lib/microajax.min.js"></script>
