--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -3,31 +3,33 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Thesis</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<h1>Client-side versus Server-side Test Suite</h1>
+<h1>Client-side versus Server-side Geoprocessing Test Suite</h1>
 <br>
-<form>Test ID: <input type="text" id = "testID" name="ID"></form>
-Browser:<select id="browser" onchange="whichBrowser()">
+<form>Test ID: <input type="text" id = "testID" name="ID" required></form>
+Browser: <select id="browser" onchange="whichBrowser()">
   <option></option>
   <option>Chrome</option>
   <option>Firefox</option>  
   <option>IE</option>
   <option>Safari</option>
   <option>Opera</option>
+  <option>Server</option>
   <option>Other</option>
 </select>
 <br>
-Hardware:<select id="hardware" onchange="whatHardware()">
+Hardware: <select id="hardware" onchange="whatHardware()">
   <option></option>
   <option>Laptop</option>
   <option>Desktop</option>  
   <option>Tablet</option>
   <option>Phone</option>
-   <option>Other</option>
+   <option>Server</option>
 </select>
 <br>
-OS:<select id="OS" onchange="operatingSystem()">
+Operating System: <select id="OS" onchange="operatingSystem()">
   <option></option>
   <option>Windows</option>
   <option>Apple</option>  
@@ -37,17 +39,25 @@ OS:<select id="OS" onchange="operatingSystem()">
 </select>
 
 <br>
-<input id="testOne" type="button" value="Initial Test" onclick="initialize();" /> 
+1. <input class="network" type="button" value="Initial Network Test" onclick="initialize();" /> 
 <br>
-<input id="startClient" type="button" value="Run Client" onclick="runClient();" />
+2. <input class="buffer" type="button" value="Run Point Buffer" onclick="callBuf('points');" />
 <br>
-<input id="testTwo" type="button" value="Second Test" onclick="secondTest();" /> 
+3. <input  class="buffer" type="button" value="Run Line Buffer" onclick="callBuf('lines');" />
 <br>
-<input id="startServer" type="button" value="Run Server" onclick="runServer();" />
+4. <input  class="buffer" type="button" value="Run Polygon Buffer" onclick="callBuf('polygons');" />
 <br>
-<input id="testThree" type="button" value="Third Test" onclick="thirdTest();" /> 
+5. <input class="network" type="button" value="Second Network Test" onclick="secondTest();" /> 
 <br>
-<a href="http://localhost:8080/thesis/rest/services/results">Download Results</a>
+6. <input  class="voronoi" type="button" value="Run Voronoi" onclick="callTriangulation();" />
+<br>
+7. <input  class="union" type="button" value="Run Union" onclick="callUnion();" />
+<br>
+8. <input class="network" type="button" value="Third Network Test" onclick="thirdTest();" /> 
+<br>
+9. <input id="startServer" type="button" value="Run Server" onclick="runServer();" />
+<br>
+10. <a href="http://localhost:8080/thesis/rest/services/results">Download Results</a>
 
 <!-- JavaScript Libraries -->
 <script type="text/javascript" src="lib/microajax.min.js"></script>
