Bandwidth/latency test using Boomerang.js

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -60,6 +60,8 @@ Operating System: <select id="OS" onchange="operatingSystem()">
 10. <a href="http://localhost:8080/thesis/rest/services/results">Download Results</a>
 
 <!-- JavaScript Libraries -->
+<script type="text/javascript" src="lib/boomerang.js"></script>
+<script type="text/javascript" src="lib/bw.js"></script>
 <script type="text/javascript" src="lib/microajax.min.js"></script>
 <script type="text/javascript" src="lib/async.js"></script>
 <script type="text/javascript" src="lib/javascript.util.js"></script>
