Fix to service that returns the network test results

--- a/thesis/WebContent/index.html
+++ b/thesis/WebContent/index.html
@@ -64,6 +64,8 @@ Operating System: <select id="OS" onchange="operatingSystem()">
 12. <input id="startServer" type="button" value="Run Server Union" onclick="runServerUnion();" />
 <br>
 13. <a href="http://localhost:8080/thesis/rest/services/results">Download Results</a>
+<br>
+14. <a href="http://localhost:8080/thesis/rest/services/networkResults">Download Network Results</a>
 
 <!-- JavaScript Libraries -->
 <script type="text/javascript" src="lib/boomerang.js"></script>
